--- a/src/mmmPizza.Site/Shared/NavMenu.razor
+++ b/src/mmmPizza.Site/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">mmmpizzza-site</a>
+        <a class="navbar-brand" href="">mmmPizza.Site</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
